--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,6 @@
         ]
       }
     },
-    "postCreateCommand": "pip install -r requirements.txt || true"
+    "postCreateCommand": "pip install -r requirements.txt || true && pip install -r /djangox509/getEAP_TLS/requirements.txt || true"
   }
   
