#2 DEV Changed folder where certs are stored

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       dockerfile: getEAP_TLS_Dockerfile
     volumes:
       - .:/djangox509
-      - shared-certs:/djangox509/getEAP_TLS/certs 
+      - shared-certs:/djangox509/getEAP_TLS/server_certs 
     ports:
       - "8000:8000"
     working_dir: /djangox509/getEAP_TLS
@@ -18,7 +18,7 @@ services:
     env_file:
       - ./our_radius/config.env
     volumes:
-      - shared-certs:/etc/raddb/certs  
+      - shared-certs:/etc/raddb/server_certs  
 
 volumes:
   shared-certs:  # Definir el volumen compartido
