--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,12 +19,25 @@ services:
       - "1813:1813/udp"
     env_file:
       - ./our_radius/config.env
+      - ./our_mysql/config.env
     volumes:
       - shared-certs:/etc/raddb/server_certs
     networks:
       - our_network
+  mysql:
+    image: mysql:8.0
+    container_name: mysql-server
+    env_file:
+      - ./our_mysql/config.env
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    networks:
+      - our_network
 volumes:
-  shared-certs:  # Definir el volumen compartido
+  shared-certs:  # Shared volume for certificates
+  mysql_data:  # Volume for MySQL
 
 networks:
   our_network:
