DEV Added volume for radius configuration files and healthcheck to asure django doesnt start until mysql service is running

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: getEAP_TLS_Dockerfile
+    container_name: djangox509-server
     volumes:
       - .:/djangox509
       - shared-certs:/djangox509/getEAP_TLS/server_certs
@@ -12,8 +13,14 @@ services:
     command: ["./docker-entrypoint.sh"]
     networks:
       - our_network
+    depends_on:
+      mysql:
+        condition: service_healthy
+    env_file:
+      - ./our_mysql/config.env
   radius:
     build: ./our_radius
+    container_name: radius-server
     ports:
       - "1812:1812/udp"
       - "1813:1813/udp"
@@ -22,8 +29,10 @@ services:
       - ./our_mysql/config.env
     volumes:
       - shared-certs:/etc/raddb/server_certs
+      - radius_config:/etc/raddb
     networks:
       - our_network
+    restart: always
   mysql:
     image: mysql:8.0
     container_name: mysql-server
@@ -35,9 +44,15 @@ services:
       - mysql_data:/var/lib/mysql
     networks:
       - our_network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 5s
+      timeout: 5s
+      retries: 3
 volumes:
   shared-certs:  # Shared volume for certificates
   mysql_data:  # Volume for MySQL
+  radius_config: # Volume for RADIUS server configuration
 
 networks:
   our_network:
