(#22) DEV Added functionality for removing SSIDs in the RADIUS

--- a/our_radius/Dockerfile
+++ b/our_radius/Dockerfile
@@ -7,7 +7,7 @@ COPY ./server-template /etc/raddb/sites-available/server-template
 COPY ./default /etc/raddb/sites-enabled/default
 COPY ./clients.conf.template /etc/raddb/clients.conf.template
 COPY ./cron /etc/cron.d/cron
-COPY ./process_ssids.sh ./create_ssids.sh /usr/local/bin/
+COPY ./process_ssids.sh ./create_ssids.sh ./remove_ssids.sh /usr/local/bin/
 
 RUN apt-get update &&   \
     # We install envsubst
@@ -19,8 +19,9 @@ RUN apt-get update &&   \
     chmod 600 /etc/cron.d/cron && \ 
     chmod 700 /usr/local/bin/process_ssids.sh && \
     chmod 700 /usr/local/bin/create_ssids.sh && \
+    chmod 700 /usr/local/bin/remove_ssids.sh && \
     crontab /etc/cron.d/cron  && \ 
-    mkdir -p /etc/raddb/server_certs/processed /etc/raddb/server_certs/pending 
+    mkdir -p /etc/raddb/server_certs/processed /etc/raddb/server_certs/pending  /etc/raddb/server_certs/deletion 
 
 # Ports that are exposed
 EXPOSE 1812/udp 1813/udp
