--- a/our_radius/config/clients.conf.template
+++ b/our_radius/config/clients.conf.template
@@ -1,5 +1,5 @@
 client openwrt{
-    ipaddr = ${CLIENT_IP} 
+    ipaddr = ${RADIUS_CLIENT_IP} 
     proto = *
     secret = ${RADIUS_SECRET}
     require_message_authenticator = yes
