--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
       - EMAIL_USE_TLS
       - EMAIL_HOST_PORT
       - DOMAIN
+      - SSL 
   radius:
     build: ./our_radius
     container_name: radius-server
