--- a/our_radius/Dockerfile
+++ b/our_radius/Dockerfile
@@ -7,7 +7,7 @@ COPY ./config/server-template /etc/raddb/sites-available/server-template
 COPY ./config/default /etc/raddb/sites-enabled/default
 COPY ./config/clients.conf.template /etc/raddb/clients.conf.template
 COPY ./config/cron /etc/cron.d/cron
-COPY ./config/process_ssids.sh ./config/automatic_crl_update.sh ./config/update_crl.sh ./config/create_ssids.sh ./config/remove_ssids.sh /usr/local/bin/
+COPY ./config/process_ssids.sh ./config/automatic_crl_update.sh ./config/normalize_ssid.sh ./config/update_crl.sh ./config/create_ssids.sh ./config/remove_ssids.sh /usr/local/bin/
 
 RUN apt-get update &&   \
     # We install envsubst
@@ -18,6 +18,7 @@ RUN apt-get update &&   \
     touch /etc/raddb/clients.conf && \
     chmod 600 /etc/cron.d/cron && \ 
     chmod 700 /usr/local/bin/* && \
+    chown freerad:freerad /usr/local/bin/* && \
     crontab /etc/cron.d/cron  && \ 
     mkdir -p /etc/raddb/server_certs/processed /etc/raddb/server_certs/pending  /etc/raddb/server_certs/deletion /etc/raddb/server_certs/update_crl
 
