(#32) DEV Added timezone as an env variable, logo support for the events and other editable things for the events

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,5 @@ SSL=False
 DOMAIN=mywifipass.martinord.eu
 # if you want to use debug mode set to true, not recommended for production
 DEBUG=True
+# Timezone of the server, default is UTC, for Spain it should be Europe/Madrid for example
+TIME_ZONE="UTC"
