--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
     "name": "django-x509-dev",
     "dockerComposeFile": "../docker-compose.yaml",
     "service": "djangox509",
-    "workspaceFolder": "/djangox509/getEAP_TLS",
+    "workspaceFolder": "/djangox509/mywifipass",
     "customizations": {
       "vscode":{
         "settings": {
@@ -14,6 +14,6 @@
         ]
       }
     },
-    "postCreateCommand": "pip install -r requirements.txt || true && pip install -r /djangox509/getEAP_TLS/requirements.txt || true"
+    "postCreateCommand": "pip install -r requirements.txt || true && pip install -r /djangox509/mywifipass/requirements.txt || true"
   }
   
