--- a/mywifipass/requirements.txt
+++ b/mywifipass/requirements.txt
@@ -1,5 +1,9 @@
 # Rest API
 djangorestframework==3.16.0
+## Swagger documentation 
+drf-yasg==1.21.10
+## Nested routers
+drf-nested-routers==0.94.2
 # Functionalities
 ## Qrcode creation
 qrcode==8.2
