(#41) DEV Improved email looks

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,10 @@ EMAIL_USE_TLS=True
 EMAIL_HOST=smtp.gmail.com
 # port of the SMTP server, if using gmail, it should be 587
 EMAIL_HOST_PORT=587
+# Display name for the From header in outbound emails
+MYWIFIPASS_FROM_NAME=MyWifiPass
+# Play Store link for the MyWifiPass app used in registration emails
+MYWIFIPASS_PLAYSTORE_URL=https://play.google.com/store/apps/details?id=app.mywifipass
 # port of the webapp, default is 10000
 WEBAPP_PORT=10000
 # domain name of the webapp, or ip:port if not using a domain name
